--- a/app/views/shared/_joined_group_members.html.erb
+++ b/app/views/shared/_joined_group_members.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container mt-4">
+<div class="mt-4">
   <h5 class="mb-4">Group Members</h5>
   <div class="members-avatars d-flex flex-wrap">
     <% @users.each_with_index do |user, index| %>
