blue color added in the filter controller with a span with class to make the text blue

--- a/app/assets/stylesheets/components/_index_dropdown_filter.scss
+++ b/app/assets/stylesheets/components/_index_dropdown_filter.scss
@@ -1,3 +1,9 @@
+//style for the text result
+.result-category{
+  color: $primary;
+}
+
+//style for level and city filter dropdown button
 .city-filter{
  margin-left:15px;
 }
