--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
 
     <div class="results-card-container">
       <% if params[:query].present? %>
-        <h2 data-filter-target="title">Results for <%= @category %> </h2>
+      <h2 data-filter-target="title">Results for <span class="result-category"><%= @category %></span></h2>
       <% else %>
         <h2 data-filter-target="title">All events </h2>
       <% end %>
