--- a/app/views/shared/_testcard.html.erb
+++ b/app/views/shared/_testcard.html.erb
@@ -8,10 +8,10 @@
         <img src="https://placehold.co/600x400" alt="Event Image" class="event-card-long-image">
       <% end %>
       <div class="event-card-long-right">
-        <p class="event-card-long-text"><span class="event-card-long-icon"><i class="fa-solid fa-calendar-days"></i></span><%= event.start_date.strftime('%a, %d %b - %H:%M') %></p>
+        <p class="event-card-long-text" ><%= event.start_date.strftime('%a, %d %b - %H:%M') %></p>
         <h5 class="event-card-long-title"><%= event.title %></h5>
-        <p class="event-card-long-text"><span class="event-card-long-icon"><i class="fa-solid fa-users"></i></span><%= pluralize(event.spots_left(event), 'Spot') %> Left</p>
-        <p class="event-card-long-text"><span class="event-card-long-icon"><i class="fa-solid fa-location-dot"></i></span><%= event.city %></p>
+        <p class="event-card-long-text"><%= pluralize(event.bookings.size, 'Attendee') %> | <%= pluralize(event.spots_left(event), 'Spot') %> Left</p>
+        <p class="event-card-long-text"><%= event.city %></p>
       </div>
     </div>
   <% end %>
