--- a/app/views/shared/_group_posts.html.erb
+++ b/app/views/shared/_group_posts.html.erb
@@ -76,7 +76,7 @@
   <% end %>
   <%= simple_form_for [@group, @post] do |f| %>
     <%= f.input :message %>
-    <div class="text-center">
+    <div class="text-center mb-3">
       <%= f.button :submit, class: "btn btn-primary mt-3 col-6 rounded-pill" %>
     </div>
   <% end %>
