button on home page responsive added teamup button component

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -19,4 +19,5 @@
 @import "index_events";
 @import "index_map";
 @import "flashes";
-@import "index_dropdown_filter"
+@import "index_dropdown_filter";
+@import "teamup_button"
