--- a/app/views/shared/_home_banner.html.erb
+++ b/app/views/shared/_home_banner.html.erb
@@ -4,7 +4,7 @@
     <br>
     <div class="button d-flex justify-content-center">
 
-      <%= link_to "Search Events", events_path(city: "all"), class: "btn btn-primary btn-lg col-6 rounded-pill" %>
+      <%= link_to "Search Events", events_path(city: "all"), class: "teamup-button btn btn-primary btn-lg px-30 rounded-pill" %>
 
     </div>
   </div>
