make category bar responsive

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -20,4 +20,5 @@
 @import "index_map";
 @import "flashes";
 @import "index_dropdown_filter";
-@import "teamup_button"
+@import "teamup_button";
+@import "teamup_container"
