--- a/app/views/shared/_category_bar.html.erb
+++ b/app/views/shared/_category_bar.html.erb
@@ -1,10 +1,10 @@
 
 <div class="category-container">
-  <div class="index-category-bar ps-2 py-2">
+  <div class="index-category-bar py-2 d-flex flex-wrap justify-content-center">
     <% categories = Event.pluck(:category).uniq %>
     <% categories.each do |category| %>
       <%= link_to events_path(query: category), data: { filter_target: "filter", action: "click->filter#fire"} do %>
-        <div id="<%= category %>" class="item">
+        <div id="<%= category %>" class="item ps-2">
           <%= check_box_tag "categories[]", category, false, class: "category-checkbox visually-hidden", id: "category-#{category.parameterize}" %>
           <%= label_tag "category-#{category.parameterize}", category, class: "category-label" %>
         </div>
