--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -1,35 +1,37 @@
 <%= render "shared/home_banner" %>
 
-<%= render "shared/category_bar" %>
-<div class="results-card-container">
-  <div class="d-flex align-items-center gap-0">
-    <h2> Top 5 events in </h2>
-    <div class="city-dropdown" style="margin-bottom:5px;">
-      <button style="border-width:0;" class=" dropdown-toggle m-0"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false">
-        <span style="font-weight: 500; font-size:calc(1.325rem + 0.9vw); font-family:Inter, Helvetica, sans-serif; color:#0D6EFD; line-height: 1.2; margin-bottom: 0.5rem;"><%= @city %></span>
-      </button>
-      <ul class="dropdown-menu">
-      <% @unique_citys.each do |city| %>
-        <li class="dropdown-item"><%= link_to "#{city}", events_path(city: "#{city}") %></li>
+<div class="teamup-container">
+  <%= render "shared/category_bar" %>
+  <div class="results-card-container">
+    <div class="d-flex align-items-center gap-0">
+      <h2> Top 5 events in </h2>
+      <div class="city-dropdown" style="margin-bottom:5px;">
+        <button style="border-width:0;" class=" dropdown-toggle m-0"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+          <span style="font-weight: 500; font-size:calc(1.325rem + 0.9vw); font-family:Inter, Helvetica, sans-serif; color:#0D6EFD; line-height: 1.2; margin-bottom: 0.5rem;"><%= @city %></span>
+        </button>
+        <ul class="dropdown-menu">
+        <% @unique_citys.each do |city| %>
+          <li class="dropdown-item"><%= link_to "#{city}", events_path(city: "#{city}") %></li>
+        <% end %>
+        </ul>
+      </div>
+    </div>
+
+
+    <div class="index-event-cards">
+      <% @near_events.each do |event| %>
+      <div class="index-event-card">
+        <%= render "shared/event_card_long", event: event %>
+      </div>
       <% end %>
-      </ul>
     </div>
-  </div>
-
-
-  <div class="index-event-cards">
-    <% @near_events.each do |event| %>
-    <div class="index-event-card">
-      <%= render "shared/event_card_long", event: event %>
+    <br><br>
+    <div class="text-center">
+      <%= link_to "See all Events in #{@city}", events_path(city: "#{@city}"), class: "teamup-button btn btn-primary btn-lg mt-3 rounded-pill" %>
     </div>
-    <% end %>
+    <br>
   </div>
-  <br><br>
-  <div class="text-center">
-    <%= link_to "See all Events in #{@city}", events_path(city: "#{@city}"), class: "teamup-button btn btn-primary btn-lg mt-3 rounded-pill" %>
-  </div>
-  <br>
 </div>
