category bar updated with padding and margin

--- a/app/assets/stylesheets/components/_index_category_bar.scss
+++ b/app/assets/stylesheets/components/_index_category_bar.scss
@@ -63,6 +63,8 @@ h1{
   // margin-right: 10px;
   cursor: pointer;
   border: 1px solid #999;
+  font-size: 20px;
+  margin-top: 5px;
 }
 
 .catergory-label:hover {
